--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,8 +2,5 @@
     <div class="py-5 text-center">
         <a class="btn btn-primary mx-5" href="#" role="button" routerLink="/rechercher">Rechercher</a>
         <a class="btn btn-primary mx-5" href="#" role="button" routerLink="/annoncer">Annoncer</a>
-    </div>
-
-    <input type="text" name="inputName" id="inputName" [(ngModel)]="name"> 
-    <p>Name = {{name}}</p>
+    </div
 </div>
